Move large input remaining count to avoid scrollbar

--- a/stylesheets/components/Input.scss
+++ b/stylesheets/components/Input.scss
@@ -120,7 +120,7 @@
 
     &--large {
       bottom: 0;
-      margin: 12px;
+      margin: 12px 24px 12px 12px;
       position: absolute;
       right: 0;
     }
